Travis-CI: require Ubuntu Trusty as we want mysql-client 5.6+
mysql_config_editor only appeared with MySQL 5.6.
The default Travis-CI is Ubuntu Preceise which has only MySQL 5.5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: go
 go:
 - 1.8
 - tip
+# Require trusty because the older environment (Ubuntu precise) has only
+# mysql 5.5 which lacks mysql_config_editor
+dist: trusty
+sudo: false
 addons:
   apt:
     packages:
