--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ addons:
     packages:
     # For mysql_config_editor
     - mysql-client-5.6
+
+script:
+- go test -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
