Travis-CI: add go_import_path
The go_import_path option of Travis-CI allows to tell Travis-CI the path where
the code should be cloned in $GOPATH.
This allows external contributors to use Travis-CI on their fork without
incorrectly running the testsuite with the original import path instead of their
modified code.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ addons:
     # For mysql_config_editor
     - mysql-client-5.6
 
+go_import_path: github.com/dolmen-go/mylogin 
+
+before_install:
+- go list
+
 script:
 - go test -coverprofile=coverage.txt -covermode=atomic
 
