--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 ---
 language: go
 go:
-- 1.13.x
+- 1.15.x
 - tip
-- 1.12.x
-- 1.11.x
-- 1.10.x
+- 1.14.x
+#- 1.13.x
+#- 1.12.x
+#- 1.11.x
+#- 1.10.x
+# The oldest version when this project was created:
 - 1.9.x
 env:
   global:
