--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ go:
 #- 1.13.x
 #- 1.12.x
 #- 1.11.x
-#- 1.10.x
-# The oldest version when this project was created:
-- 1.9.x
+- 1.10.x
+# No longer supported by github.com/go-sql-driver/mysql because of driver.Connector which appeared in Go 1.10
+#- 1.9.x
 env:
   global:
   - GO111MODULE=on
